# ft_printf

./: CMakeLists.txt  Makefile  \  a.out  char_print.c  cnt  di_print.c  dig_int_print.c  ft_isdigit.c  ft_itoa.c  ft_printf.c  ft_printf.h  ft_printf.h.gch  ft_putchar_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_strchr.c  ft_strlen.c  hex_print.c  history.csv  libft.h  libft.h.gch  lolmy  main.c  my  notmy  print_specifier.c  run.sh  s_print.c  specifier_parser.c  str_print.c  upper_hex_print.c  upper_x_print.c  x_print.c
includes/: ft_printf.h  ft_printf.h.gch
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putchar_fd.h  ft_putchar_fd.h.gch  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strcpy.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  (+11 more)
libft/include/: libft.h
src/: ft_c_print.c  ft_di_print.c  ft_p_print.c  ft_perc_print.c  ft_point_detector.c  ft_print_specifier.c  ft_printf.c  ft_ptf_putnbr_fd.c  ft_s_print.c  ft_specifier_parser.c  ft_surpluses.c  ft_u_print.c  ft_u_ptf_putnbr_fd.c  ft_upper_x_print.c  ft_valid.c  ft_x_print.c
srcs/: ft_c_print.c  ft_di_print.c  ft_print_specifier.c  ft_s_print.c  ft_specifier_parser.c  ft_x_print.c
tests/: 01_main_test_c.c  02_main_test_s.c  03_main_test_di.c  04_main_test_p.c  05_main_test_x.c  06_main_test_u.c  07_main_test_prc.c  a.out
tmp/: cnt_len.c
